--- a/pyrosite/css/style.css
+++ b/pyrosite/css/style.css
@@ -4,14 +4,22 @@ body {
     word-spacing: 1px;
     background-color: rgb(207,207,207);
 }
+
+.reviewwrapper {
+    position: relative;
+    background-color: rgb(97,97,97);
+    width: 1800px;
+    height: auto;
+    margin: auto;
+}
 .filter a:hover{
 
 }
 .filter a {  
 	color:black;
 	text-decoration:none;
-    text-align: center;
     font-size: 32px;
+    display: inline-block;
 }
 
 .filter a.current { 
@@ -20,21 +28,17 @@ body {
 }
 
 .filter {
-    padding-top: 250px;
+    padding-top: 150px;
+    z-index: 700;
     text-align: center;
-
 }
 
 .container {
-    padding-left: 83.5px;
-    padding-right: 30px;
-    padding-top: 60px;
+    padding-top: 50px;
+    position: absolute;
     padding-bottom: 60px;
-    margin-left: 15%;
+    margin-left: 18%;
     margin-right: 15%;
-    overflow: scroll;
-
-
 }
 
 .img {
