--- a/pyrosite/css/style.css
+++ b/pyrosite/css/style.css
@@ -2,43 +2,109 @@ body {
     font-family: Oxygen Mono;
     font-size: 25px;
     word-spacing: 1px;
-    background-color: rgb(207,207,207);
+    background-image: url("../images/bgmain.png");
+    background-repeat: repeat;
+    margin-right: 0px;
+}
+
+.logo {
+    position: absolute;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    background-image: url("../images/bg.png");
+    background-repeat: repeat;
+    text-align: center;
+    top:0;
+    right:0;
+    left: 0;
+}
+
+.logogo {
+    position: relative;
 }
 
 .reviewwrapper {
-    position: relative;
-    background-color: rgb(97,97,97);
-    width: 1800px;
-    height: auto;
-    margin: auto;
+    width: auto;
+    margin-top:120px;   
+    overflow: scroll;
+    height: 1400px;
 }
+.pro {
+    word-spacing: -14px;}
+
+.nav {
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    right: 0;
+    left: 0;
+    text-align: center;
+    margin-top: 608px;
+
+}
+.nav-wrap nav{
+    text-align: center; 
+    margin-top:640px;
+}
+
+.nav-wrap ul {
+    position: relative;
+    z-index: 9999939939920203994;
+    text-align: center;
+    word-spacing: 31px; 
+    margin-right: 50px;
+}
+
+.nav-wrap nav ul li a:hover {
+    color: red;
+
+}
+.nav-warp ul{
+    word-spacing: 100px;
+}
+.nav-wrap ul li{
+    text-decoration: none;
+    display: inline;
+    font-size: 40px;
+}
+
+.nav-wrap ul li a {
+    text-decoration: none;
+    color: white;
+}
+
 .filter a:hover{
 
 }
+
 .filter a {  
-	color:black;
+	color:white;
 	text-decoration:none;
-    font-size: 32px;
+    font-size: 60px;
     display: inline-block;
 }
 
 .filter a.current { 
     color:red;
-    font-size: 45px
+    font-size: 75px;
 }
 
 .filter {
-    padding-top: 150px;
+    padding-top: 50px;
     z-index: 700;
     text-align: center;
+    word-spacing: 80px;
+    margin-right: 550px;
 }
 
 .container {
-    padding-top: 50px;
     position: absolute;
     padding-bottom: 60px;
-    margin-left: 18%;
-    margin-right: 15%;
+    width: 3000px;
+    top: 0;
+    right: 0;
+    left: 0;
+    margin: auto;
 }
 
 .img {
