--- a/pyrosite/css/style.css
+++ b/pyrosite/css/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Oxygen Mono;
+    font-family: "Oxygen Mono";
     font-size: 25px;
     word-spacing: 1px;
     background-image: url("../images/bgmain.png");
@@ -8,128 +8,40 @@ body {
 }
 
 .logo {
-    position: absolute;
     padding-top: 100px;
     padding-bottom: 100px;
     background-image: url("../images/bg.png");
     background-repeat: repeat;
     text-align: center;
-    top:0;
-    right:0;
-    left: 0;
-}
-
-.logogo {
-    position: relative;
-}
-
-.reviewwrapper {
-    width: auto;
-    margin-top:120px;   
-    overflow: scroll;
-    height: 1400px;
-}
-.pro {
-    word-spacing: -14px;}
-
-.nav {
-    position: absolute;
-    z-index: -1;
     top: 0;
     right: 0;
     left: 0;
-    text-align: center;
-    margin-top: 608px;
-
-}
-.nav-wrap nav{
-    text-align: center; 
-    margin-top:640px;
 }
 
-.nav-wrap ul {
-    position: relative;
-    z-index: 9999939939920203994;
-    text-align: center;
-    word-spacing: 31px; 
-    margin-right: 50px;
-}
-
-.nav-wrap nav ul li a:hover {
-    color: red;
-
-}
-.nav-warp ul{
-    word-spacing: 100px;
-}
-.nav-wrap ul li{
-    text-decoration: none;
-    display: inline;
-    font-size: 40px;
-}
-
-.nav-wrap ul li a {
-    text-decoration: none;
-    color: white;
-}
-
-.filter a:hover{
-
-}
-
-.filter a {  
-	color:white;
-	text-decoration:none;
-    font-size: 60px;
-    display: inline-block;
-}
-
-.filter a.current { 
-    color:red;
-    font-size: 75px;
-}
-
-.filter {
-    padding-top: 50px;
-    z-index: 700;
-    text-align: center;
-    word-spacing: 80px;
-    margin-right: 550px;
-}
-
-.container {
-    position: absolute;
-    padding-bottom: 60px;
-    width: 3000px;
-    top: 0;
-    right: 0;
-    left: 0;
-    margin: auto;
-}
-
-.img {
-    margin: 6px;
-}
 .isotope-item {
     z-index: 2;
 }
+
 .isotope-hidden.isotope-item {
     pointer-events: none;
     z-index: 1;
 }
+
 .isotope,
 .isotope .isotope-item {
-  /* change duration value to whatever you like */
+    /* change duration value to whatever you like */
 
     -webkit-transition-duration: 0.8s;
     -moz-transition-duration: 0.8s;
     transition-duration: 0.8s;
 }
+
 .isotope {
     -webkit-transition-property: height, width;
     -moz-transition-property: height, width;
     transition-property: height, width;
 }
+
 .isotope .isotope-item {
     -webkit-transition-property: -webkit-transform, opacity;
     -moz-transition-property: -moz-transform, opacity;
