--- a/pyrosite/css/style.css
+++ b/pyrosite/css/style.css
@@ -5,19 +5,93 @@ body {
     background-image: url("../images/bgmain.png");
     background-repeat: repeat;
     margin-right: 0px;
+    margin-left: 0px;
+    margin-top: 0px;
 }
 
 .logo {
-    padding-top: 100px;
-    padding-bottom: 100px;
-    background-image: url("../images/bg.png");
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-image: url("../images/bgimg.png");
     background-repeat: repeat;
     text-align: center;
-    top: 0;
-    right: 0;
-    left: 0;
 }
 
+img {
+    width: 50%;
+    height: 50%;
+}
+
+.reviewwrapper {
+    width: 1900px;
+    margin: auto;
+    padding-left: 70px;
+}
+
+.reviewwrapper img {
+    width: 250px;
+    height: 350px;
+    padding-left: 4px;
+    padding-right: 4px;
+}
+
+.filter a.current {
+    color:red;
+    font-size: 60px;
+}
+
+.filter a.current:hover {
+    background-color: none;
+}
+
+.filter {
+    text-align: center;
+    font-size: 35px;
+    word-spacing: 20px;
+}
+
+.filter a{
+    text-decoration: none;
+    color: white;
+}
+
+.filter a:hover {
+    color: orange;
+
+}
+
+.nav {
+    text-align: center;
+    font-size: 28px;  
+    margin-top: -70px;
+    margin-bottom: 80px;
+    word-spacing: 60px;
+}
+
+.nav a {
+    text-decoration: none;
+    color:white;   
+    word-spacing: 150px;
+}
+
+.nav a:hover {
+    color:orange;
+}
+
+.navback {
+
+}
+
+.navback {
+    text-align: center;
+}
+
+.nav .select2 {
+    word-spacing: -5px;
+}
+.select {
+    word-spacing: 70px;
+}
 .isotope-item {
     z-index: 2;
 }
